# 18847_project

./: .gitignore  Makefile  README.md  alexnet.py  resnet50.py
GEMM_CPU/: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  gemm_cpu.cpp
GEMM_FPGA/: Makefile  batch_run.sh  matmul.hpp  matmul_demo.cpp  test.txt
GEMM_GPU/: GEMM_GPU_README.md  Makefile  char_gemm.cu  double_gemm.cu  float16_gemm.cu  float32_gemm.cu
TF2/: Makefile
TF2/Runtime_Engine/cnn/device/src/: feature_writer.cl  filter_reader.cl  input_reader.cl  pe.cl  pool.cl  pool_tail.cl  relu.cl
TF2/Runtime_Engine/cnn/host/inc/: input_loader.h  types.h
